--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,24 @@
 
 		<title>Smugglers Cove</title>
 
-		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="stylesheet" href="/global.css" />
-		<link rel="stylesheet" href="/build/bundle.css" />
+<!-- 		<link rel="icon" type="image/png" href="/favicon.png" /> -->
+<!-- 		<link rel="stylesheet" href="/global.css" /> -->
+<!-- 		<link rel="stylesheet" href="/build/bundle.css" /> -->
 
-		<script defer src="/build/bundle.js"></script>
+<!-- 		<script defer src="/build/bundle.js"></script> -->
+		<style>
+			img {
+				position: fixed;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				z-index: 1;
+			}
+		</style>
 	</head>
 
-	<body></body>
+	<body>
+		<img src="https://lh4.googleusercontent.com/VCZx_w3c-W99yFJqG6AMtDi6UWi6tZEofEZhKHYbkkUnbmK-QytP_CMAbYvF9oetobhjNXetj4wD_ReinzAo=w2940-h6366-rw"/>
+	</body>
 </html>
