Fix some errors

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 			}
 			
 			.prank img {
-/* 				height: 100vh; */
+				height: 100vh;
 			}
 		</style>
 		
@@ -43,7 +43,7 @@
 				didLoadJs = true
 			}
 			
-			document.addEventListener('keyup', e = > {
+			document.addEventListener('keyup', function(e) {
 				if (e.keyCode === 27) loadJS();	
 			})
 		</script>
