--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 	<body>
 		<div class="prank">
-			<img src="https://lh4.googleusercontent.com/VCZx_w3c-W99yFJqG6AMtDi6UWi6tZEofEZhKHYbkkUnbmK-QytP_CMAbYvF9oetobhjNXetj4wD_ReinzAo=w2940-h6366-rw"/>
+			<img src="/prank.JPG"/>
 		</div>
 	</body>
 </html>
