--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 				right: 0;
 				left: 0;
 				bottom: 0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
+/* 				display: flex; */
+/* 				align-items: center; */
+/* 				justify-content: center; */
 			}
 		</style>
 		
