--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 				right: 0;
 				left: 0;
 				bottom: 0;
-/* 				display: flex; */
-/* 				align-items: center; */
-/* 				justify-content: center; */
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 		</style>
 		
@@ -55,7 +55,7 @@
 
 				img.addEventListener('load', function() {
 					loader.remove()
-					img.style.opacity = 1
+					img.style.display = 'block'
 				})
 			})
 		</script>
@@ -63,7 +63,7 @@
 
 	<body>
 		<div class="prank">
-			<img src="/prank.JPG"/ style="opacity: 0">
+			<img src="/prank.JPG"/ style="display: none">
 			<div class="loader">Loading...</div>
 		</div>
 	</body>
