Try again.  Will this ever end??

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,6 @@
 		<!-- Prank -->
 		<style>
 			.prank {
-
-			}
-			
-			.prank img {
 				position: fixed;
 				top: 0;
 				right: 0;
@@ -27,6 +23,10 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+			}
+			
+			.prank img {
+				height: 100vh;
 			}
 		</style>
 		
